# FileCrc7zCrcStuff

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
