cmake_minimum_required(VERSION 3.0.0)
project(fuck VERSION 0.1.0 LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 20)

set(BUILD_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

set(srcDir ${CMAKE_CURRENT_SOURCE_DIR}/src)

find_package(ZLIB)

#set(CMAKE_EXPORT_COMPILE_COMMANDS 1)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc)

set(sources
    ${srcDir}/main.cpp
)

add_executable(fuck ${sources})
set_target_properties( fuck PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${BUILD_DIRECTORY}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BUILD_DIRECTORY}
    RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${BUILD_DIRECTORY}
    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${BUILD_DIRECTORY}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BUILD_DIRECTORY}
)

target_link_libraries(fuck PUBLIC ZLIB::ZLIB)
